templatetags + media, fix list of goods on the left

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% block title %}{% endblock title %}
 {% block style_css %}
+{% load goods_tags %}
+
     <link rel="stylesheet" href="{% static "deps/css/my_css.css" %}">
 {% endblock style_css %}
 {% block content %}
