--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -18,27 +18,9 @@
                             <div class="mb-4">
                                 <h5 class="mb-3">Категории</h5>
                                 <div class="list-group">
-                                    <a href="../goods/catalog.html" class="list-group-item list-group-item-action active">
-                                        Все товары
-                                    </a>
-                                    <a href="../goods/catalog.html" class="list-group-item list-group-item-action">
-                                        Кухня
-                                    </a>
-                                    <a href="../goods/catalog.html" class="list-group-item list-group-item-action">
-                                        Спальня
-                                    </a>
-                                    <a href="../goods/catalog.html" class="list-group-item list-group-item-action">
-                                        Гостиная
-                                    </a>
-                                    <a href="../goods/catalog.html" class="list-group-item list-group-item-action">
-                                        Офис
-                                    </a>
-                                    <a href="../goods/catalog.html" class="list-group-item list-group-item-action">
-                                        Фурнитура
-                                    </a>
-                                    <a href="../goods/catalog.html" class="list-group-item list-group-item-action">
-                                        Декор
-                                    </a>
+                                    {% for category in categories %}
+                                        <a href="{% url 'catalog:index' %}" class="list-group-item list-group-item-action">{{category.name}}</a>
+                                    {% endfor %}
                                 </div>
                             </div>
                             
@@ -88,8 +70,14 @@
                             <div class="col">
                                 <div class="product-card h-100 bg-white d-flex flex-column"> 
                                     <div>
-                                        <img src="{% static product.image %}" class="card-img-top" alt="...">
-                                        {% comment %} <span class="badge badge-sale">-10%</span> {% endcomment %}
+                                        {% if product.image %}
+                                            <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                                        {% else %}
+                                            <img src="{% static "deps/images/Not found image.png" %}" class="card-img-top" alt="...">                               
+                                        {% endif %}
+                                        {% if product.discount %}      
+                                            <span class="badge badge-sale">{{ product.discount|floatformat:"0" }}%</span>
+                                        {% endif %} 
                                     </div>
                                     <div class="card-body d-flex flex-column" style="padding: 20px;">
                                         <div> 
@@ -101,8 +89,10 @@
                                         <div class="mt-auto">
                                             <div class="d-flex justify-content-between align-items-end">
                                                 <div>
-                                                    {% comment %} <span class="price-old"><s>55.00 $</s></span> {% endcomment %}
-                                                    <span class="price-new d-block">{{ product.price }} $</span>
+                                                    {% if product.discount %}      
+                                                        <span class="price-old"><s>{{ product.price }} $</s></span>
+                                                    {% endif %} 
+                                                    <span class="price-new d-block">{{ product.sell_price }} $</span>
                                                 </div>
                                                 <button class="btn btn-cart btn-dark">
                                                     <i class="bi bi-cart-plus fs-5"></i>
