Category new slug url, goods not found

--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -17,25 +17,25 @@
                             <div class="product-gallery p-4">
                                 <div class="row g-3">
                                     <div class="col-12">
-                                        <img src="../deps/images/goods/set of tea table and two chairs.jpg" 
+                                        <img src="{{ product.image.url }}" 
                                             class="img-fluid rounded-3 w-100 thumbnail" 
                                             data-bs-toggle="modal" 
                                             data-bs-target="#imageModal">
                                     </div>
                                     <div class="col-4">
-                                        <img src="../deps/images/goods/set of tea table and two chairs.jpg" 
+                                        <img src="{{ product.image.url }}"  
                                             class="img-fluid rounded-3 thumbnail"
                                             data-bs-toggle="modal" 
                                             data-bs-target="#imageModal2">
                                     </div>
                                     <div class="col-4">
-                                        <img src="../deps/images/goods/set of tea table and two chairs.jpg" 
+                                        <img src="{{ product.image.url }}" 
                                             class="img-fluid rounded-3 thumbnail"
                                             data-bs-toggle="modal" 
                                             data-bs-target="#imageModal3">
                                     </div>
                                     <div class="col-4">
-                                        <img src="../deps/images/goods/set of tea table and two chairs.jpg" 
+                                        <img src="{{ product.image.url }}" 
                                             class="img-fluid rounded-3 thumbnail"
                                             data-bs-toggle="modal" 
                                             data-bs-target="#imageModal4">
@@ -47,13 +47,10 @@
                         <!-- Product Info -->
                         <div class="col-lg-6">
                             <div class="product-info">
-                                <span class="product-id">Артикул: 006368</span>
-                                <h1 class="product-title">Чайный столик и три стула</h1>
-                                <div class="product-price">144.00 $</div>
+                                <h1 class="product-title">{{ product.name }} </h1>
+                                <div class="product-price">{{ product.sell_price }}$</div>
                                 <p class="product-description">
-                                    Комплект из трёх стульев и дизайнерский столик для гостинной комнаты. 
-                                    Идеальное сочетание стиля и комфорта. Материал - натуральное дерево, 
-                                    покрытие - экологичный лак.
+                                    {{ product.description }}
                                 </p>
                                 
                                 <div class="d-flex align-items-center mb-4">
