--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -32,7 +32,7 @@
                     </button>
                     <ul class="dropdown-menu dropdown-menu-dark">
                         {% for category in categories %}
-                            <li><a class="dropdown-item" href="{% url "catalog:index" %}"><i class="bi bi-collection me-2"></i>{{category.name}}</a></li>
+                            <li><a class="dropdown-item" href="{% url "catalog:index" category.slug %}"><i class="bi bi-collection me-2"></i>{{category.name}}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
