Pagination catalog + url page

--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -123,18 +123,26 @@
             <!-- Pagination -->
             <nav aria-label="Page navigation" class="mt-5">
                 <ul class="pagination justify-content-center">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
-                            <i class="bi bi-chevron-left"></i>
-                        </a>
+                    <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
+                        <a class="page-link" href="
+                        {% if goods.has_previous %}?page={{ goods.previous_page_number }}{% else %}
+                        #
+                        {% endif %}">
+                            <i class="bi bi-chevron-left"></i></a>
                     </li>
-                    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">
-                            <i class="bi bi-chevron-right"></i>
-                        </a>
+                    {% for page in goods.paginator.page_range %}
+                    {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
+                        <li class="page-item">
+                            <a class="page-link {% if goods.number == page %}active{% endif %}" href="?page={{ page }}">{{ page }}</a>
+                        </li>
+                    {% endif %}
+                    {% endfor %}
+                    <li class="page-item {% if not goods.has_next %}disabled{% endif %}">
+                        <a class="page-link" href="
+                        {% if goods.has_next %}?page={{ goods.next_page_number }}{% else %}
+                        #
+                        {% endif %}">
+                            <i class="bi bi-chevron-right"></i></a>
                     </li>
                 </ul>
             </nav>
