Сorrect urlencode + search

--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -1,5 +1,7 @@
 {% extends "main/base.html" %}
 {% load static %}
+{% load goods_tags %}
+
 {% block title %}{% endblock title %}
 {% block style_css %}
     <link rel="stylesheet" href="{% static "deps/css/goods/goods_catalog.css" %}">
@@ -14,7 +16,7 @@
                     <div class="filter-card bg-white p-4">
                         <h4 class="mb-4"><i class="bi bi-funnel me-2"></i>Фильтры</h4>
                         
-                        <form action="" method="get">
+                        <form action="{% if request.GET.q %}{% url "catalog:search" %}{% else %}{% url "catalog:index" slug_url %}{% endif %}" method="get">
                             <div class="mb-4">
                                 <h5 class="mb-3">Категории</h5>
                                 <div class="list-group">
@@ -26,7 +28,10 @@
                             
                             <div class="mb-4">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="on_sale" id="onSaleCheck" value="on">
+                                    <input class="form-check-input" type="checkbox" name="on_sale" id="onSaleCheck" value="on" {% if request.GET.on_sale == 'on'%}checked{% endif %}>
+                                    {% if request.GET.q %}
+                                        <input type="hidden" name="q" value="{{ request.GET.q }}">
+                                    {% endif %}
                                     <label class="form-check-label" for="onSaleCheck">
                                         Товары со скидкой
                                     </label>
@@ -36,19 +41,22 @@
                             <div class="mb-4">
                                 <h5 class="mb-3">Сортировка</h5>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="order_by" id="sortDefault" value="default" checked>
+                                    <input class="form-check-input" type="radio" name="order_by" id="sortDefault" value="default"
+                                    {% if not request.GET.order_by or request.GET.order_by == 'default'%}checked{% endif %}>
                                     <label class="form-check-label" for="sortDefault">
                                         По умолчанию
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="order_by" id="sortPriceAsc" value="price">
+                                    <input class="form-check-input" type="radio" name="order_by" id="sortPriceAsc" value="price" 
+                                    {% if request.GET.order_by == 'price'%}checked{% endif %}>
                                     <label class="form-check-label" for="sortPriceAsc">
                                         По возрастанию цены
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="order_by" id="sortPriceDesc" value="-price">
+                                    <input class="form-check-input" type="radio" name="order_by" id="sortPriceDesc" value="-price" 
+                                    {% if request.GET.order_by == '-price'%}checked{% endif %}>
                                     <label class="form-check-label" for="sortPriceDesc">
                                         По убыванию цены
                                     </label>
@@ -125,23 +133,19 @@
                 <ul class="pagination justify-content-center">
                     <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
                         <a class="page-link" href="
-                        {% if goods.has_previous %}?page={{ goods.previous_page_number }}{% else %}
-                        #
-                        {% endif %}">
+                        {% if goods.has_previous %}?{% change_params page=goods.previous_page_number %}{% else %}#{% endif %}">
                             <i class="bi bi-chevron-left"></i></a>
                     </li>
                     {% for page in goods.paginator.page_range %}
                     {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
                         <li class="page-item">
-                            <a class="page-link {% if goods.number == page %}active{% endif %}" href="?page={{ page }}">{{ page }}</a>
+                            <a class="page-link {% if goods.number == page %}active{% endif %}" href="?{% change_params page=page %}">{{ page }}</a>
                         </li>
                     {% endif %}
                     {% endfor %}
                     <li class="page-item {% if not goods.has_next %}disabled{% endif %}">
                         <a class="page-link" href="
-                        {% if goods.has_next %}?page={{ goods.next_page_number }}{% else %}
-                        #
-                        {% endif %}">
+                        {% if goods.has_next %}?{% change_params page=goods.next_page_number %}{% else %}#{% endif %}">
                             <i class="bi bi-chevron-right"></i></a>
                     </li>
                 </ul>
