--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -61,9 +61,9 @@
                         </li>
                     </ul>
                     
-                    <form class="d-flex ms-auto me-3" role="search">
+                    <form class="d-flex ms-auto me-3" role="search" action="{% url "catalog:search" %}" method="get" >
                         <div class="input-group">
-                            <input class="form-control" type="search" placeholder="Поиск..." aria-label="Search">
+                            <input class="form-control" type="search" name='q' placeholder="Поиск..." aria-label="Search">
                             <button class="btn btn-outline-light" type="submit">
                                 <i class="bi bi-search"></i>
                             </button>
