--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -1,4 +1,4 @@
-{% extends "main/base.html" %}
+{% extends "base.html" %}
 {% load static %}
 {% block title %}{% endblock title %}
 {% block style_css %}
@@ -80,22 +80,6 @@
         </div>
     </div>
 </main>
-
-<!-- Image Modals -->
-<div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body text-center">
-                <img src="../deps/images/goods/set of tea table and two chairs.jpg" 
-                    class="modal-image img-fluid" 
-                    alt="Чайный столик и три стула">
-            </div>
-        </div>
-    </div>
-</div>
 {% endblock content %}
 
 {% block scripts %}
