--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="users/login.html">
+                            <a class="nav-link" href="{% url "users:login" %}">
                                 <i class="bi bi-box-arrow-in-right me-1"></i>Войти
                             </a>
                         </li>
@@ -77,9 +77,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark text-small">
                             <li><a class="dropdown-item" href="users/profile.html"><i class="bi bi-person me-2"></i>Профиль</a></li>
-                            <li><a class="dropdown-item" href="orders/create_order.html"><i class="bi bi-receipt me-2"></i>Заказы</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="users/login.html"><i class="bi bi-box-arrow-right me-2"></i>Выйти</a></li>
+                            <li><a class="dropdown-item" href="{% url "users:login" %}"><i class="bi bi-box-arrow-right me-2"></i>Выйти</a></li>
                         </ul>
                     </div>
                 </div>
