--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
                             <span>Профиль</span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark text-small">
-                            <li><a class="dropdown-item" href="users/profile.html"><i class="bi bi-person me-2"></i>Профиль</a></li>
+                            <li><a class="dropdown-item" href="{% url "users:profile" %}"><i class="bi bi-person me-2"></i>Профиль</a></li>
                             <li><a class="dropdown-item" href="{% url "users:login" %}"><i class="bi bi-box-arrow-right me-2"></i>Выйти</a></li>
                         </ul>
                     </div>
