--- a/templates/base.html
+++ b/templates/base.html
@@ -23,61 +23,61 @@
 
 <body>
     <!-- Современный хедер -->
-        <header class="sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <header class="sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-1">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center" href="{% url "main:index" %}">
-                    <i class="bi bi-house-door me-2"></i>
+                <a class="navbar-brand py-1" href="{% url 'main:index' %}">
+                    <i class="bi bi-house-door me-1"></i>
                     Mebel House
                 </a>
                 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+                <button class="navbar-toggler py-1" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 
                 <div class="collapse navbar-collapse" id="mainNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                            <a class="nav-link dropdown-toggle px-2" href="#" role="button" data-bs-toggle="dropdown">
                                 <i class="bi bi-info-circle me-1"></i> Информация
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
                                 <li><a class="dropdown-item" href="#"><i class="bi bi-truck me-2"></i>Доставка и оплата</a></li>
                                 <li><a class="dropdown-item" href="#"><i class="bi bi-telephone me-2"></i>Контакты</a></li>
-                                <li><a class="dropdown-item" href="{% url "main:about" %}"><i class="bi bi-people me-2"></i>О нас</a></li>
+                                <li><a class="dropdown-item" href="{% url 'main:about' %}"><i class="bi bi-people me-2"></i>О нас</a></li>
                             </ul>
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="carts/cart.html">
+                            <a class="nav-link px-2" href="{% url 'carts:cart' %}">
                                 <i class="bi bi-cart3 me-1"></i>Корзина
                             </a>
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url "users:login" %}">
+                            <a class="nav-link px-2" href="{% url 'users:login' %}">
                                 <i class="bi bi-box-arrow-in-right me-1"></i>Войти
                             </a>
                         </li>
                     </ul>
                     
-                    <form class="d-flex ms-auto me-3" role="search" action="{% url "catalog:search" %}" method="get" >
-                        <div class="input-group">
-                            <input class="form-control" type="search" name='q' placeholder="Поиск..." aria-label="Search">
-                            <button class="btn btn-outline-light" type="submit">
+                    <form class="d-flex ms-2 me-2" role="search" action="{% url 'catalog:search' %}" method="get">
+                        <div class="input-group input-group-sm">
+                            <input class="form-control form-control-sm" type="search" name='q' placeholder="Поиск..." aria-label="Search">
+                            <button class="btn btn-outline-light btn-sm" type="submit">
                                 <i class="bi bi-search"></i>
                             </button>
                         </div>
                     </form>
                     
-                    <div class="dropdown">
-                        <a href="#" class="d-flex align-items-center link-light text-decoration-none dropdown-toggle" data-bs-toggle="dropdown">
-                            <i class="bi bi-person-circle fs-4 me-1"></i>
+                    <div class="dropdown ms-2">
+                        <a href="#" class="d-flex align-items-center link-light text-decoration-none dropdown-toggle py-1 px-2" data-bs-toggle="dropdown">
+                            <i class="bi bi-person-circle fs-5 me-1"></i>
                             <span>Профиль</span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark text-small">
-                            <li><a class="dropdown-item" href="{% url "users:profile" %}"><i class="bi bi-person me-2"></i>Профиль</a></li>
-                            <li><a class="dropdown-item" href="{% url "users:login" %}"><i class="bi bi-box-arrow-right me-2"></i>Выйти</a></li>
+                            <li><a class="dropdown-item" href="{% url 'users:profile' %}"><i class="bi bi-person me-2"></i>Профиль</a></li>
+                            <li><a class="dropdown-item" href="{% url 'users:logout' %}"><i class="bi bi-box-arrow-right me-2"></i>Выйти</a></li>
                         </ul>
                     </div>
                 </div>
@@ -86,6 +86,7 @@
     </header>
 
     <!-- Основная часть -->
+    {% include 'includes/notifications.html' %}
     {% block content %}
     {% endblock content %}
     
