--- a/static/deps/css/my_css.css
+++ b/static/deps/css/my_css.css
@@ -230,3 +230,20 @@ main {
         border-top: 1px solid rgba(255,255,255,0.1);
     }
 }
+
+/* Универсальные стили для поиска в навбаре */
+.navbar .input-group-sm {
+    min-width: 180px;
+    max-width: 250px;
+}
+
+.navbar .input-group-sm .form-control,
+.navbar .input-group-sm .btn {
+    height: 31px;
+    line-height: 1;
+    font-size: 0.875rem;
+}
+
+.navbar .input-group-sm .btn {
+    padding: 0.25rem 0.5rem;
+}
