--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static "deps/favicon/favicon-16x16.png" %}">
     <link rel="manifest" href="{% static "deps/favicon/site.webmanifest" %}">
     {% block style_css %}
+        <link rel="stylesheet" href="{% static "deps/css/base/base.css" %}">
     {% endblock style_css %}
 </head>
 
@@ -53,37 +54,55 @@
                                 <i class="bi bi-cart3 me-1"></i>Корзина
                             </a>
                         </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link px-2" href="{% url 'users:login' %}">
-                                <i class="bi bi-box-arrow-in-right me-1"></i>Войти
-                            </a>
-                        </li>
                     </ul>
                     
-                    <form class="d-flex ms-2 me-2" role="search" action="{% url 'catalog:search' %}" method="get">
-                        <div class="input-group input-group-sm">
-                            <input class="form-control form-control-sm" type="search" name='q' placeholder="Поиск..." aria-label="Search">
-                            <button class="btn btn-outline-light btn-sm" type="submit">
+                    <form class="d-flex align-items-center ms-2 me-2" role="search" action="{% url 'catalog:search' %}" method="get">
+                        <div class="input-group input-group-sm" style="width: 200px;">
+                            <input class="form-control form-control-sm border-end-0" 
+                                type="search" 
+                                name="q" 
+                                placeholder="Поиск..." 
+                                aria-label="Search"
+                                style="height: 31px;">
+                            <button class="btn btn-outline-light btn-sm border-start-0" 
+                                    type="submit"
+                                    style="height: 31px; padding: 0.25rem 0.5rem;">
                                 <i class="bi bi-search"></i>
                             </button>
                         </div>
                     </form>
                     
-                    <div class="dropdown ms-2">
-                        <a href="#" class="d-flex align-items-center link-light text-decoration-none dropdown-toggle py-1 px-2" data-bs-toggle="dropdown">
-                            <i class="bi bi-person-circle fs-5 me-1"></i>
-                            <span>Профиль</span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark text-small">
-                            <li><a class="dropdown-item" href="{% url 'users:profile' %}"><i class="bi bi-person me-2"></i>Профиль</a></li>
-                            <li><a class="dropdown-item" href="{% url 'users:logout' %}"><i class="bi bi-box-arrow-right me-2"></i>Выйти</a></li>
-                        </ul>
-                    </div>
+                    <ul class="navbar-nav"> 
+                        {% if not user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link px-2" href="{% url 'users:login' %}">
+                                    <i class="bi bi-box-arrow-in-right me-1"></i>Войти
+                                </a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle px-2" href="#" role="button" 
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="bi bi-person-circle me-1"></i>
+                                    <span>Профиль</span>
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item" href="{% url 'users:profile' %}">
+                                        <i class="bi bi-person me-2"></i>Профиль</a></li>
+                                    <li>{% if user.is_admin or user.is_staff %}
+                                        <a class="dropdown-item" href="{% url 'admin:index' %}">
+                                        <i class="bi bi-person me-2"></i>Админ панель</a>{% endif %}</li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="{% url 'users:logout' %}">
+                                        <i class="bi bi-box-arrow-right me-2"></i>Выйти</a></li>
+                                </ul>
+                            </li>
+                        {% endif %}
+                    </ul>
                 </div>
             </div>
         </nav>
-    </header>
+    </header>   
 
     <!-- Основная часть -->
     {% include 'includes/notifications.html' %}
