--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -19,39 +19,74 @@
                         <!-- User Info -->
                         <div class="col-lg-5 p-4">
                             <h3 class="text-center mb-4">Мой профиль</h3>
-                            <form>
+                            <form action='{% url "users:profile" %}' method='post' enctype='multipart/form-data'>
+                                {% csrf_token %}
                                 <div class="avatar-container">
-                                    <img src="{% static 'deps/images/baseavatar.jpg' %}" 
-                                         class="avatar-img" 
-                                         alt="Аватар пользователя">
+                                    {% if user.image %}
+                                        <img src="{{ user.image.url }}" 
+                                            class="avatar-img" 
+                                            alt="Аватар пользователя">
+                                    {% else %}
+                                        <img src="{% static 'deps/images/baseavatar.jpg' %}" 
+                                            class="avatar-img" 
+                                            alt="Аватар пользователя">
+                                    {% endif %}
                                     <div class="avatar-upload">
                                         <i class="bi bi-camera-fill"></i>
-                                        <input type="file" class="d-none" id="avatarUpload" accept="image/*">
+                                        <input type="file" class="d-none" id="id_image" name="image" accept="image/*">
                                     </div>
                                 </div>
                                 
                                 <div class="mb-3">
-                                    <label for="firstName" class="form-label">Имя</label>
-                                    <input type="text" class="form-control" id="firstName" 
-                                           placeholder="Введите ваше имя" value="Иван">
+                                    <label for="id_first_name" class="form-label">Имя</label>
+                                    <input type="text" class="form-control" id="id_first_name" name='first_name'
+                                           value='{{ form.first_name.value }}' placeholder="Введите ваше имя" value="Иван">
+                                    {% if form.first_name.errors %}
+                                        <div class="alert-simple error show">
+                                            {% for error in form.first_name.errors %}
+                                                {{ error }}
+                                                {% endfor %}
+                                        </div>
+                                    {% endif %}
                                 </div>
                                 
                                 <div class="mb-3">
-                                    <label for="lastName" class="form-label">Фамилия</label>
-                                    <input type="text" class="form-control" id="lastName" 
-                                           placeholder="Введите вашу фамилию" value="Иванов">
+                                    <label for="id_last_name" class="form-label">Фамилия</label>
+                                    <input type="text" class="form-control" id="id_last_name" name='last_name'
+                                           placeholder="Введите вашу фамилию" value="{{ form.last_name.value }}">
+                                    {% if form.last_name.errors %}
+                                        <div class="alert-simple error show">
+                                            {% for error in form.last_name.errors %}
+                                                {{ error }}
+                                                {% endfor %}
+                                        </div>
+                                    {% endif %}
                                 </div>
                                 
                                 <div class="mb-3">
-                                    <label for="username" class="form-label">Имя пользователя</label>
-                                    <input type="text" class="form-control" id="username" 
-                                           placeholder="Введите имя пользователя" value="ivanov">
+                                    <label for="id_username" class="form-label">Имя пользователя</label>
+                                    <input type="text" class="form-control" id="id_username" name='username'
+                                           placeholder="Введите имя пользователя" value="{{ form.username.value }}">
+                                    {% if form.username.errors %}
+                                        <div class="alert-simple error show">
+                                            {% for error in form.username.errors %}
+                                                {{ error }}
+                                                {% endfor %}
+                                        </div>
+                                    {% endif %}
                                 </div>
                                 
                                 <div class="mb-4">
-                                    <label for="email" class="form-label">Email</label>
-                                    <input type="email" class="form-control" id="email" 
-                                           placeholder="Введите ваш email" value="ivanov@example.com">
+                                    <label for="id_email" class="form-label">Email</label>
+                                    <input type="email" class="form-control" id="id_email" name='email'
+                                           placeholder="Введите ваш email" value="{{ form.email.value }}">
+                                    {% if form.email.errors %}
+                                    <div class="alert-simple error show">
+                                        {% for error in form.email.errors %}
+                                            {{ error }}
+                                            {% endfor %}
+                                    </div>
+                                    {% endif %}
                                 </div>
                                 
                                 <button type="submit" class="btn btn-primary btn-save w-100">
@@ -226,16 +261,16 @@
 <script>
     // Avatar upload
     document.querySelector('.avatar-upload').addEventListener('click', function() {
-        document.getElementById('avatarUpload').click();
+        document.getElementById('id_image').click(); // ← Исправлено на id_image
     });
-    
-    document.getElementById('avatarUpload').addEventListener('change', function(e) {
-        if (e.target.files && e.target.files[0]) {
+
+    document.getElementById('id_image').addEventListener('change', function(e) {
+        if (this.files && this.files[0]) {
             const reader = new FileReader();
             reader.onload = function(event) {
                 document.querySelector('.avatar-img').src = event.target.result;
             };
-            reader.readAsDataURL(e.target.files[0]);
+            reader.readAsDataURL(this.files[0]);
         }
     });
     
