--- a/templates/includes/notifications.html
+++ b/templates/includes/notifications.html
@@ -1,25 +1,14 @@
 {% load static %}
 
-<div class="container mt-4">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            {% if messages %}
-                {% for message in messages %}
-                    {% if message.tags == 'success' %}
-                    <div id="notification" class="position-fixed start-50 translate-middle-x z-3 alert alert-success fade show custom-shadow" role="alert">
-                        {{ message }}
-                    </div>
-                    {% endif %}
-                    {% if message.tags == 'warning' %}
-                    <div id="notification" class="position-fixed start-50 translate-middle-x z-3 alert alert-danger fade show custom-shadow" role="alert">
-                        {{ message }}
-                    </div>
-                    {% endif %}
-                {% endfor %}
-            {% else %}
-            <div id="jq-notification" class="position-fixed start-50 translate-middle-x z-3 alert alert-success fade show custom-shadow" style="display: none;" role="alert">
-            </div>
-            {% endif %}
+{% if messages %}
+    {% for message in messages %}
+        <div id="notification-{{ forloop.counter }}" 
+             class="position-fixed start-50 translate-middle-x z-3 alert fade show custom-shadow {% if message.tags == 'success' %}alert-success{% elif message.tags == 'warning' %}alert-warning{% else %}alert-info{% endif %}" 
+             role="alert">
+            {{ message }}
         </div>
-    </div>
+    {% endfor %}
+{% else %}
+<div id="jq-notification" class="position-fixed start-50 translate-middle-x z-3 alert alert-success fade show custom-shadow" style="display: none;" role="alert">
 </div>
+{% endif %}
